--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2 class="products_title">Fetured Items</h2>
             <p class="products_text">Shop for items based on what we featured in this week</p>
         </div>
-        <div class="products_items sale_content">
+        <div class="products_items">
             <div class="product_item item1">
                 <img src="img/item1_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
