semantic elements added

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 </head>
 <body>
     <div class="top">
-        <div class="header page">
+        <header class="header page">
             <div class="header_logo">
                 <button class="header_button"> <img src="img/header_logo.svg" alt="" class="logo"></button>
                 <button class="header_button"><img src="img/header_search.svg" alt="search" class="search"></button>            
             </div>
-            <div class="header_menu">
+            <nav class="header_menu">
                 <button class="header_button"><img src="img/header_button1.svg" alt="button menu"></button>
                 <button class="header_button"><img src="img/header_button2.svg" alt="button profile"></button>
                 <button class="header_button"><img src="img/header_button3.svg" alt=""></button>
 
-            </div>
-        </div>
-        <div class="top_info">
+            </nav>
+        </header>
+        <section class="top_info">
             <img width="50%" src="img/top_image.svg" alt="top image">
             <div class="branding">
                 <h1 class="brand_name">THE BRAND
                     </h1>
                 <h2 class="brand_text">OF LUXERIOUS <span class="colored">FASHION</span></h2> 
             </div>
-        </div>
+        </section>
     </div>
-    <div class="sale_content">
+    <section class="sale_content center">
         <div class="sale_item woman">
            <div class="sale_item_content">
                 <p class="sale_item_title">30% OFF</p>
@@ -61,64 +61,75 @@
              <h3 class="sale_item_info">ACCESORIES</h3>
             </div>
         </div>
-    </div>
+    </section>
     <div class="products_content center">
         <div class="products_info">
             <h2 class="products_title">Fetured Items</h2>
             <p class="products_text">Shop for items based on what we featured in this week</p>
         </div>
-        <div class="products_items">
-            <div class="product_item item1">
+        <section class="products_items">
+            <figure class="product_item item1">
                 <img src="img/item1_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p>  
                 </div>                
-            </div>
-            <div class="product_item item2">
+            </figure>
+            <figure class="product_item item2">
                 <img src="img/item2_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p>  
-                </div>
-                
-            </div>
-            <div class="product_item item3">
+                </div>                
+            </figure>
+            <figure class="product_item item3">
                 <img src="img/item3_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                   <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                   <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                   </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p> 
                 </div>                
-            </div>
-            <div class="product_item item4">
+            </figure>
+            <figure class="product_item item4">
                 <img src="img/item4_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p>
                 </div>                
-            </div>
-            <div class="product_item item5">
+            </figure>
+            <figure class="product_item item5">
                 <img src="img/item5_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p>
                 </div>
                 
-            </div>
-            <div class="product_item item6">
+            </figure>
+            <figure class="product_item item6">
                 <img src="img/item6_img.svg" alt="" class="product_img">
                 <div class="product_item_content">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <figcaption>
+                        <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    </figcaption>
                     <p class="product_info">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="product_price">$52.00</p>
                 </div>                
-            </div>
-        </div>
+            </figure>
+        </section>
         <div class="products_footer">
             <button class="browse_all_button">
                 <p>Browse All Product</p>
