--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
             </div>
             <nav class="header_menu">
                 <button class="header_button"><img src="img/header_button1.svg" alt="button menu"></button>
-                <button class="header_button"><img src="img/header_button2.svg" alt="button profile"></button>
-                <button class="header_button"><img src="img/header_button3.svg" alt=""></button>
-
+                <button class="header_button none"><img src="img/header_button2.svg" alt="button profile"></button>
+                <button class="header_button none"><img src="img/header_button3.svg" alt=""></button>
             </nav>
         </header>
         <section class="top_info">
-            <img width="50%" src="img/top_image.svg" alt="top image">
+            <img class="none" width="50%" src="img/top_image.svg" alt="top image">
             <div class="branding">
                 <h1 class="brand_name">THE BRAND
                     </h1>
