--- a/cart.html
+++ b/cart.html
@@ -12,15 +12,17 @@
 <body>
     <div class="box-content">
         <header class="header center">
-            <div class="header__left"><a href="index.html" class="logo"><img src="img/header_logo.svg" alt=""></a><a
-                    href="#" class="search"><img src="img/header_search.svg" alt=""></a></div>
+            <div class="header__left"><a href="index.html" class="logo"><img src="img/header_logo.svg" alt="logo"></a><a
+                    href="#" class="search"><img src="img/header_search.svg" alt="search icon"></a></div>
             <div class="header__right">
                 <div class="burger-menu-icon"><label for="burger"><img src="img/logo-burger-menu.svg"
                             alt="burger"></label><input id="burger" type="checkbox">
                     <nav class="burger__nav">
                         <h3 class="burger__nav__heading">MENU</h3>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item"><a href="#" class="burger__nav__title">MAN</a></div>
+                            <div class="burger__nav__item">
+                                <a href="catalog.html" class="burger__nav__title">MAN</a>
+                            </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
                                 <li><a class="burger__nav__link" href="#">Bags</a></li>
@@ -29,7 +31,9 @@
                             </ul>
                         </div>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item"><a href="#" class="burger__nav__title">WOMAN</a></div>
+                            <div class="burger__nav__item">
+                                <a href="catalog.html" class="burger__nav__title">WOMAN</a>
+                            </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
                                 <li><a class="burger__nav__link" href="#">Jackets & Coats</a></li>
@@ -39,7 +43,9 @@
                             </ul>
                         </div>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item"><a href="#" class="burger__nav__title">KIDS</a></div>
+                            <div class="burger__nav__item">
+                                <a href="catalog.html" class="burger__nav__title">KIDS</a>
+                            </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
                                 <li><a class="burger__nav__link" href="#">Jackets & Coats</a></li>
@@ -49,10 +55,11 @@
                                 <li><a class="burger__nav__link" href="#">Bags</a></li>
                             </ul>
                         </div>
+
                     </nav>
                 </div>
-                <div class="account-icon"><img src="img/logo-account.svg" alt="account"></div>
-                <div class="basket-icon"><img src="img/logo-basket.svg" alt="basket"></div>
+                <a class="account-icon" href="registration.html"><img src="img/logo-account.svg" alt="account"></a>
+                <a class="basket-icon" href="cart.html"><img src="img/logo-basket.svg" alt="basket"></a>
             </div>
         </header>
         <section class="top-head center">
@@ -63,7 +70,7 @@
                 <div class="product__add">
                     <section class="product__add__item"><img width="262px" src="img/product-3.jpg" alt="">
                         <div class="product__add__item__info">
-                            <div class="product__add__item__info__title"><a href="#"
+                            <div class="product__add__item__info__title"><a href="product.html"
                                     class="product__add__item__info__link">MANGO <br>PEOPLE T-SHIRT</a></div>
                             <div class="product__add__item__info__filter">
                                 <p class="product__add__item__info__filter__category">Price: <span
@@ -86,7 +93,7 @@
                     </section>
                     <section class="product__add__item"><img src="img/product-2.jpg" alt="">
                         <div class="product__add__item__info">
-                            <div class="product__add__item__info__title"><a href="#"
+                            <div class="product__add__item__info__title"><a href="product.html"
                                     class="product__add__item__info__link">MANGO <br>PEOPLE T-SHIRT</a></div>
                             <div class="product__add__item__info__filter">
                                 <p class="product__add__item__info__filter__category">Price: <span
@@ -148,28 +155,27 @@
                     <h1 class="subscribe__info__title">SUBSCRIBE</h1>
                     <h1 class="subscribe__info__text">FOR OUR NEWLETTER AND PROMOTION</h1>
                     <div class="subscribe__text-field">
-                        <div class="subscribe__text-field__group"><input class="subscribe__text-field__input"
+                        <form class="subscribe__text-field__group"><input class="subscribe__text-field__input"
                                 type="email" required placeholder="Enter Your Mail"><button
-                                class="subscribe__text-field__btn" type="button">Subscribe</button></div>
+                                class="subscribe__text-field__btn" type="button">Subscribe</button></form>
                     </div>
                 </div>
-            </div>
-            <div class="contacts">
-                <p class="contacts__copyright">© 2023 Brand All Rights Reserved.</p>
-                <div class="contacts__social__icons"><a href="#" class="social__icon_link">
-                        <div class="social_icon_background"><svg class="social_icon" width="13" height="16"
-                                viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M6.7402 0.203125C3.55552 0.203125 0.408081 2.34063 0.408081 5.8C0.408081 8 1.63726 9.25 2.38221 9.25C2.68951 9.25 2.86643 8.3875 2.86643 8.14375C2.86643 7.85313 2.13079 7.23438 2.13079 6.025C2.13079 3.5125 4.03043 1.73125 6.48878 1.73125C8.60259 1.73125 10.167 2.94062 10.167 5.1625C10.167 6.82187 9.50585 9.93437 7.3641 9.93437C6.59121 9.93437 5.93006 9.37187 5.93006 8.56563C5.93006 7.38438 6.74951 6.24062 6.74951 5.02187C6.74951 2.95312 3.83487 3.32812 3.83487 5.82812C3.83487 6.35313 3.90006 6.93437 4.13286 7.4125C3.70451 9.26875 2.82919 12.0344 2.82919 13.9469C2.82919 14.5375 2.91299 15.1188 2.96886 15.7094C3.0744 15.8281 3.02163 15.8156 3.18304 15.7563C4.74744 13.6 4.69157 13.1781 5.39928 10.3562C5.78107 11.0875 6.76814 11.4812 7.55034 11.4812C10.8468 11.4812 12.3274 8.24688 12.3274 5.33125C12.3274 2.22813 9.66415 0.203125 6.7402 0.203125Z"
-                                    fill="black" /></svg></div>
-                    </a><a href="#" class="social__icon_link">
-                        <div class="social_icon_background"><svg class="social_icon" width="17" height="14"
-                                viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M14.4181 3.74107C14.4281 3.88319 14.4281 4.02535 14.4281 4.16747C14.4281 8.50247 11.1509 13.4974 5.16096 13.4974C3.31558 13.4974 1.60132 12.9593 0.159302 12.0253C0.421495 12.0558 0.673569 12.0659 0.94585 12.0659C2.46851 12.0659 3.8702 11.5482 4.98953 10.6649C3.5576 10.6345 2.3576 9.69031 1.94415 8.39081C2.14585 8.42125 2.34751 8.44156 2.5593 8.44156C2.85172 8.44156 3.14418 8.40094 3.41643 8.32991C1.92401 8.02531 0.80465 6.70553 0.80465 5.11163V5.07103C1.23824 5.31469 1.74249 5.46697 2.2769 5.48725C1.39959 4.89841 0.824826 3.89335 0.824826 2.75628C0.824826 2.14716 0.98614 1.58878 1.26851 1.10147C2.87187 3.09131 5.28195 4.39078 7.98443 4.53294C7.93403 4.28928 7.90376 4.0355 7.90376 3.78169C7.90376 1.97457 9.35586 0.502502 11.1609 0.502502C12.0987 0.502502 12.9457 0.89844 13.5407 1.53803C14.2768 1.39591 14.9827 1.12178 15.6079 0.746159C15.3659 1.5076 14.8516 2.14719 14.176 2.55325C14.8315 2.48222 15.4668 2.29944 16.0516 2.04566C15.608 2.69538 15.0533 3.27403 14.4181 3.74107V3.74107Z"
-                                    fill="black" /></svg></div>
-                    </a></div>
-            </div>
+                <div class="contacts">
+                    <p class="contacts__copyright">© 2023 Brand All Rights Reserved.</p>
+                    <div class="contacts__social__icons"><a href="#" class="social__icon_link">
+                            <div class="social_icon_background"><svg class="social_icon" width="13" height="16"
+                                    viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M6.7402 0.203125C3.55552 0.203125 0.408081 2.34063 0.408081 5.8C0.408081 8 1.63726 9.25 2.38221 9.25C2.68951 9.25 2.86643 8.3875 2.86643 8.14375C2.86643 7.85313 2.13079 7.23438 2.13079 6.025C2.13079 3.5125 4.03043 1.73125 6.48878 1.73125C8.60259 1.73125 10.167 2.94062 10.167 5.1625C10.167 6.82187 9.50585 9.93437 7.3641 9.93437C6.59121 9.93437 5.93006 9.37187 5.93006 8.56563C5.93006 7.38438 6.74951 6.24062 6.74951 5.02187C6.74951 2.95312 3.83487 3.32812 3.83487 5.82812C3.83487 6.35313 3.90006 6.93437 4.13286 7.4125C3.70451 9.26875 2.82919 12.0344 2.82919 13.9469C2.82919 14.5375 2.91299 15.1188 2.96886 15.7094C3.0744 15.8281 3.02163 15.8156 3.18304 15.7563C4.74744 13.6 4.69157 13.1781 5.39928 10.3562C5.78107 11.0875 6.76814 11.4812 7.55034 11.4812C10.8468 11.4812 12.3274 8.24688 12.3274 5.33125C12.3274 2.22813 9.66415 0.203125 6.7402 0.203125Z"
+                                        fill="black" /></svg></div>
+                        </a><a href="#" class="social__icon_link">
+                            <div class="social_icon_background"><svg class="social_icon" width="17" height="14"
+                                    viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M14.4181 3.74107C14.4281 3.88319 14.4281 4.02535 14.4281 4.16747C14.4281 8.50247 11.1509 13.4974 5.16096 13.4974C3.31558 13.4974 1.60132 12.9593 0.159302 12.0253C0.421495 12.0558 0.673569 12.0659 0.94585 12.0659C2.46851 12.0659 3.8702 11.5482 4.98953 10.6649C3.5576 10.6345 2.3576 9.69031 1.94415 8.39081C2.14585 8.42125 2.34751 8.44156 2.5593 8.44156C2.85172 8.44156 3.14418 8.40094 3.41643 8.32991C1.92401 8.02531 0.80465 6.70553 0.80465 5.11163V5.07103C1.23824 5.31469 1.74249 5.46697 2.2769 5.48725C1.39959 4.89841 0.824826 3.89335 0.824826 2.75628C0.824826 2.14716 0.98614 1.58878 1.26851 1.10147C2.87187 3.09131 5.28195 4.39078 7.98443 4.53294C7.93403 4.28928 7.90376 4.0355 7.90376 3.78169C7.90376 1.97457 9.35586 0.502502 11.1609 0.502502C12.0987 0.502502 12.9457 0.89844 13.5407 1.53803C14.2768 1.39591 14.9827 1.12178 15.6079 0.746159C15.3659 1.5076 14.8516 2.14719 14.176 2.55325C14.8315 2.48222 15.4668 2.29944 16.0516 2.04566C15.608 2.69538 15.0533 3.27403 14.4181 3.74107V3.74107Z"
+                                        fill="black" /></svg></div>
+                        </a></div>
+                </div>
         </footer>
     </div>
 </body>
