--- a/cart.html
+++ b/cart.html
@@ -20,8 +20,7 @@
                     <nav class="burger__nav">
                         <h3 class="burger__nav__heading">MENU</h3>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item">
-                                <a href="catalog.html" class="burger__nav__title">MAN</a>
+                            <div class="burger__nav__item"><a href="catalog.html" class="burger__nav__title">MAN</a>
                             </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
@@ -31,8 +30,7 @@
                             </ul>
                         </div>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item">
-                                <a href="catalog.html" class="burger__nav__title">WOMAN</a>
+                            <div class="burger__nav__item"><a href="catalog.html" class="burger__nav__title">WOMAN</a>
                             </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
@@ -43,8 +41,7 @@
                             </ul>
                         </div>
                         <div class="burger__nav__box">
-                            <div class="burger__nav__item">
-                                <a href="catalog.html" class="burger__nav__title">KIDS</a>
+                            <div class="burger__nav__item"><a href="catalog.html" class="burger__nav__title">KIDS</a>
                             </div>
                             <ul class="burger__nav__links-list">
                                 <li><a class="burger__nav__link" href="#">Accesoires</a></li>
@@ -55,11 +52,10 @@
                                 <li><a class="burger__nav__link" href="#">Bags</a></li>
                             </ul>
                         </div>
-
                     </nav>
-                </div>
-                <a class="account-icon" href="registration.html"><img src="img/logo-account.svg" alt="account"></a>
-                <a class="basket-icon" href="cart.html"><img src="img/logo-basket.svg" alt="basket"></a>
+                </div><a class="account-icon" href="registration.html"><img src="img/logo-account.svg"
+                        alt="account"></a><a class="basket-icon" href="cart.html"><img src="img/logo-basket.svg"
+                        alt="basket"></a>
             </div>
         </header>
         <section class="top-head center">
@@ -68,10 +64,10 @@
         <div class="cart__content center">
             <div class="cart__content__left">
                 <div class="product__add">
-                    <section class="product__add__item"><img width="262px" src="img/product-3.jpg" alt="">
+                    <section class="product__add__item"><img src="img/product-3.jpg" alt="">
                         <div class="product__add__item__info">
                             <div class="product__add__item__info__title"><a href="product.html"
-                                    class="product__add__item__info__link">MANGO <br>PEOPLE T-SHIRT</a></div>
+                                    class="product__add__item__info__link">MANGO PEOPLE T-SHIRT</a></div>
                             <div class="product__add__item__info__filter">
                                 <p class="product__add__item__info__filter__category">Price: <span
                                         class="product__add__item__info__filter__condition-price">300$</span></p>
@@ -89,12 +85,13 @@
                                 viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-                                    fill="#575757" /></svg></a>
+                                    fill="#575757" />
+                            </svg></a>
                     </section>
                     <section class="product__add__item"><img src="img/product-2.jpg" alt="">
                         <div class="product__add__item__info">
                             <div class="product__add__item__info__title"><a href="product.html"
-                                    class="product__add__item__info__link">MANGO <br>PEOPLE T-SHIRT</a></div>
+                                    class="product__add__item__info__link">MANGO PEOPLE T-SHIRT</a></div>
                             <div class="product__add__item__info__filter">
                                 <p class="product__add__item__info__filter__category">Price: <span
                                         class="product__add__item__info__filter__condition-price">300$</span></p>
@@ -112,21 +109,21 @@
                                 viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-                                    fill="#575757" /></svg></a>
+                                    fill="#575757" />
+                            </svg></a>
                     </section>
                 </div>
                 <div class="cart__content__left__buttons">
-                    <div class="cart__content__left__buttons__button">CLEAR SHOPPING CART</div>
-                    <div class="cart__content__left__buttons__button">CONTINUE SHOPPING</div>
+                    <div class="cart__content__left__buttons__button">Clear shopping cart</div>
+                    <div class="cart__content__left__buttons__button">Continiue shopping</div>
                 </div>
             </div>
             <div class="cart__content__right">
                 <section class="address__info">
-                    <div class="addres__info__title">SHIPPING ADRESS</div>
-                    <input class="address__info__input" type="text" placeholder="Bangladesh">
-                    <input class="address__info__input" type="text" placeholder="State">
-                    <input class="address__info__input" type="text" placeholder="Postcode/Zip">
-                    <button class="address__info__button">GET A QUOTE</button>
+                    <div class="addres__info__title">SHIPPING ADRESS</div><input class="address__info__input"
+                        type="text" placeholder="Bangladesh"><input class="address__info__input" type="text"
+                        placeholder="State"><input class="address__info__input" type="text"
+                        placeholder="Postcode/Zip"><button class="address__info__button">Get a quote</button>
                 </section>
                 <section class="final__score">
                     <div class="final__score__info">
@@ -138,8 +135,7 @@
                             <div class="final__score__info__grand__total__text">GRAND TOTAL</div>
                             <div class="final__score__info__grand__total__amount">$900</div>
                         </div>
-                    </div>
-                    <button class="final__score__button">PROCEED TO CHECKOUT</button>
+                    </div><button class="final__score__button">PROCEED TO CHECKOUT</button>
                 </section>
             </div>
         </div>
